Refactor: Refactor Infrastructure file/folder/class structure

--- a/OneDo.Api/OneDo.Application.csproj
+++ b/OneDo.Api/OneDo.Application.csproj
@@ -118,6 +118,8 @@
     <Compile Include="Common\IEntityModel.cs" />
     <Compile Include="Core\CommandBus.cs" />
     <Compile Include="Core\ICommandBus.cs" />
+    <Compile Include="Repositories\FolderRepository.cs" />
+    <Compile Include="Repositories\NoteRepository.cs" />
     <Compile Include="Queries\Folders\FolderModel.cs" />
     <Compile Include="Commands\Folders\FolderCommandHandler.cs" />
     <Compile Include="Common\ICommand.cs" />
