--- a/OneDo.Data/OneDo.Infrastructure.csproj
+++ b/OneDo.Data/OneDo.Infrastructure.csproj
@@ -107,20 +107,16 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\FolderData.cs" />
-    <Compile Include="Entities\IEntity.cs" />
-    <Compile Include="Entities\NoteData.cs" />
+    <Compile Include="Data\Entities\FolderData.cs" />
+    <Compile Include="Data\Entities\IEntityData.cs" />
+    <Compile Include="Data\Entities\NoteData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\Domain\FolderRepository.cs" />
-    <Compile Include="Repositories\Domain\NoteRepository.cs" />
-    <Compile Include="Repositories\ICommandRepository.cs" />
-    <Compile Include="Repositories\IQueryRepository.cs" />
-    <Compile Include="Repositories\IRepository.cs" />
-    <Compile Include="Repositories\IRepositoryFactory.cs" />
-    <Compile Include="Repositories\Repository.cs" />
-    <Compile Include="Repositories\RepositoryFactory.cs" />
-    <Compile Include="Services\DataService\DataService.cs" />
-    <Compile Include="Services\DataService\IDataService.cs" />
+    <Compile Include="Data\Repositories\ICommandRepository.cs" />
+    <Compile Include="Data\Repositories\IQueryRepository.cs" />
+    <Compile Include="Data\Repositories\IRepository.cs" />
+    <Compile Include="Data\Repositories\Repository.cs" />
+    <Compile Include="Data\DataService.cs" />
+    <Compile Include="Data\IDataService.cs" />
     <EmbeddedResource Include="Properties\OneDo.Data.rd.xml" />
   </ItemGroup>
   <ItemGroup />
