Feature: Replace all Api occurrences with IApi

--- a/OneDo.Api/OneDo.Application.csproj
+++ b/OneDo.Api/OneDo.Application.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Common\IEntityModel.cs" />
     <Compile Include="Core\CommandBus.cs" />
     <Compile Include="Core\ICommandBus.cs" />
+    <Compile Include="IApi.cs" />
     <Compile Include="Repositories\FolderRepository.cs" />
     <Compile Include="Repositories\NoteRepository.cs" />
     <Compile Include="Queries\Folders\FolderModel.cs" />
