Feature: Object extensions GetHashCodeFromFields

--- a/OneDo.Common/OneDo.Common.csproj
+++ b/OneDo.Common/OneDo.Common.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Extensions\CollectionExtensions.cs" />
     <Compile Include="Extensions\ColorExtensions.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
+    <Compile Include="Extensions\ObjectExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\TypeExtensions.cs" />
     <Compile Include="IAsyncHandler.cs" />
