--- a/OneDo.Domain/OneDo.Domain.csproj
+++ b/OneDo.Domain/OneDo.Domain.csproj
@@ -110,11 +110,16 @@
     <Compile Include="Common\Entity.cs" />
     <Compile Include="Common\IAggreagteRoot.cs" />
     <Compile Include="Common\IRepository.cs" />
+    <Compile Include="Model\DaysOfWeek.cs" />
+    <Compile Include="Model\ValueObjects\DailyRecurrence.cs" />
+    <Compile Include="Model\ValueObjects\MonthlyRecurrence.cs" />
+    <Compile Include="Model\ValueObjects\Recurrence.cs" />
     <Compile Include="Model\Repositories\IFolderRepository.cs" />
     <Compile Include="Model\Repositories\INoteRepository.cs" />
     <Compile Include="Model\ValueObjects\Color.cs" />
     <Compile Include="Model\Entities\Folder.cs" />
     <Compile Include="Model\Entities\Note.cs" />
+    <Compile Include="Model\ValueObjects\WeeklyRecurrence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\Specification.cs" />
     <Compile Include="Common\ValueObject.cs" />
