--- a/OneDo.Domain.Tests/OneDo.Domain.Tests.csproj
+++ b/OneDo.Domain.Tests/OneDo.Domain.Tests.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\ValueObjects\DailyRecurrenceTests.cs" />
+    <Compile Include="Model\ValueObjects\MonthlyRecurrenceTests.cs" />
     <Compile Include="Model\ValueObjects\WeeklyRecurrenceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
