Feat: Note editor (WIP)

--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -142,6 +142,7 @@
     <Compile Include="View\Behaviors\ItemClickAction.cs" />
     <Compile Include="View\Behaviors\ShowAttachedFlyoutAction.cs" />
     <Compile Include="Common\UI\TreeHelper.cs" />
+    <Compile Include="View\Controls\CalendarDatePicker.cs" />
     <Compile Include="View\Controls\InfoBar.cs" />
     <Compile Include="View\Controls\DatePicker.xaml.cs">
       <DependentUpon>DatePicker.xaml</DependentUpon>
