--- a/OneDo/OneDo.csproj
+++ b/OneDo/OneDo.csproj
@@ -145,7 +145,7 @@
       <DependentUpon>DatePicker.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Converters\CompositeConverter.cs" />
-    <Compile Include="View\ExtendedContentControl.cs" />
+    <Compile Include="Common\Mvvm\ExtendedContentControl.cs" />
     <Compile Include="View\ModalContainer.cs" />
     <Compile Include="View\NoteListControl.xaml.cs">
       <DependentUpon>NoteListControl.xaml</DependentUpon>
@@ -183,7 +183,7 @@
       <DependentUpon>FolderEditor.xaml</DependentUpon>
     </Compile>
     <Compile Include="Common\Mvvm\IView.cs" />
-    <Compile Include="View\ExtendedUserControl.cs" />
+    <Compile Include="Common\Mvvm\ExtendedUserControl.cs" />
     <Compile Include="View\NoteEditor.xaml.cs">
       <DependentUpon>NoteEditor.xaml</DependentUpon>
     </Compile>
@@ -196,7 +196,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
-    <Compile Include="View\ExtendedPage.cs" />
+    <Compile Include="Common\Mvvm\ExtendedPage.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
