--- a/OneDo.Application/OneDo.Application.csproj
+++ b/OneDo.Application/OneDo.Application.csproj
@@ -164,7 +164,7 @@
       <Project>{bb75f101-ea41-4830-a0ab-d84dc2e3fba3}</Project>
       <Name>OneDo.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\OneDo.Data\OneDo.Infrastructure.csproj">
+    <ProjectReference Include="..\OneDo.Infrastructure\OneDo.Infrastructure.csproj">
       <Project>{1711dc0d-dd6b-4111-9ea3-90bb913c5def}</Project>
       <Name>OneDo.Infrastructure</Name>
     </ProjectReference>
