--- a/OneDo/project.json
+++ b/OneDo/project.json
@@ -3,8 +3,7 @@
     "Autofac": "4.2.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
-    "MvvmLightLibs": "5.3.0",
-    "Win2D.uwp": "1.19.0"
+    "MvvmLightLibs": "5.3.0"
   },
   "frameworks": {
     "uap10.0": {}
